# wfd

./: .gitignore  README.md  go.mod  main.go  main.py  parser.py  pyproject.toml  recipe.py
app/: wfd.go
cli/: root.go  serve.go
parser/: parser.go
recipe/: recipe.go
server/: server.go
wfd/: go.mod  main.go
wfd-ui/: package.json
wfd-ui/src/: api.ts  components.d.ts  types.ts
wfd-ui/src/components/: Ingredients.vue  Instructions.vue  Parser.vue
wfd-ui/src/pages/: index.vue
wfd/app/: wfd.go
wfd/cli/: root.go  serve.go
wfd/parser/: parser.go
wfd/recipe/: ingredient.go
wfd/server/: server.go
