[project]
name = "wfd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-ollama>=0.2.2",
    "pydantic>=2.10.5",
    "ruff>=0.9.2",
]
